--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
         <li>Ansible</li>
         <li>Integração Continua</li>
     </ul> 
+    <script>
+        alert("Olá mundo");
+    </script>
 </body>
 </html>
